fix: prevent overlapping property labels

--- a/src/components/ToolMenu/FeatureInfo/index.less
+++ b/src/components/ToolMenu/FeatureInfo/index.less
@@ -1,1 +1,10 @@
-
+.feature-info-panel {
+  .ant-drawer-content-wrapper {
+    max-width: 100vw;
+  }
+  .ant-drawer-body {
+    .error-alert {
+      margin-bottom: 20px;
+    }
+  }
+}
